@@ -1,6 +1,5 @@
 name = witches
 descriptions = adds witches and their cottages
 depends = default, mobs
-
-optional_depends = protector, animalia, mobs_animal
+optional_depends = doors, flowers, stairs, protector, animalia, mobs_animal
 
